chore: sonar improvments